force-app/main/default/objects/User_Favorite_Products__c/User_Favorite_Products__c.object-meta.xml
<CustomObject>
    <label>User Favorite Products</label>
    <nameField>
        <label>Favourite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Favorite Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>