force-app/main/default/objects/User_Favorite_Products__c/fields/Bundle__c.field-meta.xml
<CustomField>
    <fullName>Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bundle</label>
    <referenceTo>Favorite_Bundle__c</referenceTo>
    <relationshipLabel>User Favorite Products (Bundle)</relationshipLabel>
    <relationshipName>User_Favorite_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>