force-app/main/default/objects/User_Favorite_Products__c/fields/Favorite_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Favorite Bundle</label>
    <referenceTo>Favorite_Bundle__c</referenceTo>
    <relationshipLabel>User Favorite Products</relationshipLabel>
    <relationshipName>User_Favorite_Products</relationshipName>
    <type>Lookup</type>
</CustomField>