force-app/main/default/objects/User_Favorite_Products__c/fields/Frequency_of_Use__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_Use__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Frequency of Use</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>