force-app/main/default/objects/User_Favorite_Products__c/fields/IsSubscription__c.field-meta.xml
<CustomField>
    <fullName>IsSubscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSubscription</label>
    <type>Checkbox</type>
</CustomField>