force-app/main/default/objects/User_Favorite_Products__c/fields/LineItemType__c.field-meta.xml
<CustomField>
    <fullName>LineItemType__c</fullName>
    <label>LineItemType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>