force-app/main/default/objects/User_Favorite_Products__c/fields/Maintenance_Type__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Type__c</fullName>
    <label>Maintenance Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>