force-app/main/default/objects/User_Favorite_Products__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>User Favorite Products</relationshipLabel>
    <relationshipName>User_Favorite_Products</relationshipName>
    <type>Lookup</type>
</CustomField>