force-app/main/default/objects/User_Favorite_Products__c/fields/Qty_Type__c.field-meta.xml
<CustomField>
    <fullName>Qty_Type__c</fullName>
    <label>Qty Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>